[gd_scene load_steps=4 format=3 uid="uid://ploalfrfxkg6"]

[ext_resource type="Script" uid="uid://bxa5pvqt7d6kw" path="res://pipe.gd" id="1_78010"]
[ext_resource type="Texture2D" uid="uid://bmtjlel7aihxo" path="res://sprites/pipe-green.png" id="1_bepn3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_78010"]
size = Vector2(48, 320)

[node name="Pipe" type="StaticBody2D"]
z_index = -1
collision_layer = 4
collision_mask = 0
script = ExtResource("1_78010")

[node name="Top" type="Sprite2D" parent="."]
rotation = -3.14159
texture = ExtResource("1_bepn3")
offset = Vector2(0, 160)
flip_h = true

[node name="Bottom" type="Sprite2D" parent="."]
texture = ExtResource("1_bepn3")
offset = Vector2(0, 160)

[node name="TopCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -160)
shape = SubResource("RectangleShape2D_78010")

[node name="BottomCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 160)
shape = SubResource("RectangleShape2D_78010")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1, -1)
scale = Vector2(2.5, 2.3)

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
